[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eggi"
version = "0.1.0"
description = "An ASGI framework with a little something for everyone. Let's start with an egg.🥚"
authors = ["JUNG JAEGYUN <twicegoddessana1229@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
# docs
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

# lint
mypy = "^1.7.1"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"

# test
pytest = "^7.4.3"


[tool.poetry.extras]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mypy",
]


[tool.mypy]
strict = true


[tool.coverage.run]
parallel = true
source = [
    "eggi"
]
context = '${CONTEXT}'

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
]


[tool.ruff.pyupgrade]
keep-runtime-typing = true
